--- a/src/pages/main/Main.css
+++ b/src/pages/main/Main.css
@@ -11,8 +11,8 @@
 
 @media screen and (max-width: 1400px) and (orientation: portrait) {
   .pageContainer[id='main'] {
-    transform: translate(0, 10%);
-    padding-bottom: 10vh;
+    transform: translate(0, 5%);
+    padding-bottom: 5vh;
   }
 }
 
